# vgbxtgfxd-gmail.com

./: README.md  cleanup.sh  deploy.sh  form_submitter.py  playwright_submitter.py  sniff_pik.py  submit_results.json
1c-stock-bot/: .env.example  .gitignore  automation.py  bot.py  calibrate.py  config.py  install.bat  parser_excel.py  requirements.txt  run.bat
data/export/: forms_export_20260527_110336.json  forms_export_20260527_110336.xlsx  forms_export_20260527_110336_companies.csv  forms_export_20260527_110336_forms.csv  forms_export_20260527_110730.json  forms_export_20260527_131144.json  forms_export_20260527_131144.xlsx  forms_export_20260527_131144_companies.csv  forms_export_20260527_131144_forms.csv
form_crawler/: .gitignore  Dockerfile  README.md  __init__.py  __main__.py  docker-compose.yml  logging_config.py  pipeline.py  pyproject.toml  requirements.txt
form_crawler/config/: __init__.py  constants.py  proxies.txt  settings.py
form_crawler/crawler/: __init__.py  browser.py
form_crawler/examples/: sample_output.json
form_crawler/export/: __init__.py  exporter.py
form_crawler/extractor/: __init__.py  form_extractor.py
form_crawler/parser/: __init__.py  html_parser.py
form_crawler/proxy/: __init__.py  rotation.py
form_crawler/search/: __init__.py  engine.py
form_crawler/storage/: __init__.py  database.py  models.py
form_crawler/tests/: conftest.py  test_parser.py  test_proxy.py  test_storage.py
frigate/: config.yml
frigate-bot/: bot.py  video_sender.py
xray-vpn/: README.md
xray-vpn/android/: README.md
(+4 files in other folders)
